[package]
name = "sqript"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/1ntEgr8/sqript"
readme = "README.md"
description = "Make a typescript of a terminal session in the style of the `script` command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.26.1", features = ["term", "process", "fs"] }
clap = { version = "4.0.32", features = ["derive", "cargo"] }
mio = { version = "0.8.5", features = ["os-poll", "os-ext"] }
chrono = "0.4.23"
